feat: добавлено получение пользователя по ID, обновлены модели и документация
